Fix modal window on small window heights

--- a/src/addons/concise-ui/components/_modals.scss
+++ b/src/addons/concise-ui/components/_modals.scss
@@ -8,6 +8,7 @@
   left: 0;
   margin: 0;
   opacity: 0;
+  overflow: scroll;
   pointer-events: none;
   position: fixed;
   right: 0;
@@ -23,11 +24,19 @@
 
 .modal-container {
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .1);
-  margin: 15% auto;
+  margin: unitSize(2) auto;
   position: relative;
   width: 90%;
 
   @media (min-width: $bp-small) { width: 526px; }
+
+  @media (min-height: $bp-extra-small) {
+    margin: 10% auto;
+  }
+
+  @media (min-height: $bp-small) {
+    margin: 15% auto;
+  }
 }
 
 .modal-header {
